fixed the pre logos for the blue text to appear on dark mode when reloaded

--- a/assets/css/public.css
+++ b/assets/css/public.css
@@ -122,6 +122,10 @@ img {
 	color: var(--logo-clr);
 } */
 
+/* .blue-logo-clr {
+	color: rgb(0, 115, 255);
+} */
+
 ul {
 	display: flex;
 	flex-direction: row;
